# plane_detector

./: CMakeLists.txt  nodelet_description.xml  package.xml
launch/: phoxi.launch  phoxi.rviz  realsense.launch  realsense.rviz  run.launch
segmentation/: Makefile  Parameters.h  Region.h  Segmentation.h  draw.cpp  edit.h  main.cpp
src/: Detector.cpp  Detector.h  Segmentation.h  main.cpp  nodelet.cpp  plane_detection.cpp  plane_detection.h
src/dsyevh3C/: dsyevh3.h
src/original/: plane_detection.h
src/peac/: AHCParamSet.hpp  AHCPlaneFitter.hpp  AHCPlaneSeg.hpp  AHCUtils.hpp  DisjointSet.hpp  eig33sym.hpp  eigen33.h
src/peac/dsyevh3/: dsyevc3.h  dsyevh3.h  dsyevq3.h  dsytrd3.h
