<?xml version="1.0"?>
<package format="2">
  <name>plane_detector</name>
  <version>1.0.0</version>
  <description>The plane_detector package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>build_depend>
  <exec_depend>pluginlib</exec_depend>exec_depend>
  <build_depend>nodelet</build_depend>build_depend>
  <exec_depend>nodelet</exec_depend>exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>eigen</depend>
  <depend>aist_utility</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>
</package>
